[workspace.package]
version = "0.8.1"
edition = "2021"
authors = [
	"Florian Wilkens <gh@1wilkens.org>",
	"Decodertalkers <aakari@tutanota.com>",
]
license = "MIT OR Apache-2.0"

[workspace]
members = [".", "macros"]

[workspace.dependencies]
pam-macros-f = { version = "0.8.1", path = "./macros" }
libc = "^0.2"
pam-sys = "1.0.0-alpha5"
memchr = "2.7.4"
uzers = "0.12.1"

[package]
name = "pam-f"
version.workspace = true
authors.workspace = true
description = "Safe Rust wrappers for PAM authentication"
license = "MIT OR Apache-2.0"
categories = ["authentication"]

repository = "https://github.com/Decodertalkers/pam/"
documentation = "https://docs.rs/pam-f/"
readme = "README.md"
include = ["LICENSE-*", "README.md", "CHANGELOG.md", "/src", "/examples"]

edition.workspace = true

[features]
default = ["client"]

functions = []
client = ["uzers"]
module = []

[dependencies]
pam-macros-f.workspace = true
libc.workspace = true
pam-sys.workspace = true
memchr.workspace = true
uzers = { workspace = true, optional = true }


[dev-dependencies]
rpassword = "7.3.1"
