[package]
name = "pam-macros-f"
version.workspace = true
authors.workspace = true
description = "Macros for the pam crate"
license.workspace = true
documentation = "https://docs.rs/pam_macros_f/"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = { version = "1.0" }
